cmake_minimum_required(VERSION 2.8)

project(hatohol CXX)
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -O2 -g3")
add_definitions(-D __STDC_FORMAT_MACROS)
set(prefix "")
set(expanded_sysconfdir "")
set(localstatedir "")
set(exec_prefix "")
set(sbindir "")
set(expanded_localstatedir "")
set(expanded_pkglocaldatadir "")
add_subdirectory(server)
add_subdirectory(data/systemd)
