SUBDIRS = . test
hatohol_clientdir=$(libexecdir)/$(PACKAGE)/client
nobase_dist_hatohol_client_SCRIPTS = \
	manage.py

nobase_dist_hatohol_client_DATA = \
	conf/locale/ja/LC_MESSAGES/django.po \
	conf/locale/ja/LC_MESSAGES/djangojs.po \
	conf/apache/django.wsgi \
	conf/apache/hatohol.site \
	conf/apache/hatohol.conf.package6 \
	conf/apache/hatohol.conf.package7 \
	hatohol/forwardview.py \
	hatohol/wsgi.py \
	hatohol/urls.py \
	hatohol/__init__.py \
	hatohol/autotools_vars.py \
	hatohol/base_settings.py \
	hatohol/branding_settings.py \
	hatohol/settings_devel.py hatohol/settings_product.py \
	hatohol/django_realize.py \
	hatohol/hatohol_def.py \
	hatohol/hatoholserver.py \
	hatohol/models.py \
	hatohol/views.py \
	hatohol/smartfield.py \
	static/css/hatohol.css \
	static/css/zabbix.css \
	static/css.external/themes/ui-lightness/jquery-ui.css \
	static/css.external/themes/ui-lightness/images/ui-bg_gloss-wave_35_f6a828_500x100.png \
	static/css.external/themes/ui-lightness/images/ui-icons_222222_256x240.png \
	static/css.external/themes/ui-lightness/images/ui-bg_glass_100_fdf5ce_1x400.png \
	static/css.external/themes/ui-lightness/images/ui-bg_glass_100_f6f6f6_1x400.png \
	static/css.external/themes/ui-lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png \
	static/css.external/themes/ui-lightness/images/ui-bg_diagonals-thick_20_666666_40x40.png \
	static/css.external/themes/ui-lightness/images/ui-bg_glass_65_ffffff_1x400.png \
	static/css.external/themes/ui-lightness/images/ui-icons_ef8c08_256x240.png \
	static/css.external/bootstrap.min.css \
	static/css.external/bootstrap.min.css.map \
	static/css.external/bootstrap-theme.min.css \
	static/css.external/jquery-ui-slider-pips.min.css \
	static/css.external/jquery.datetimepicker.css \
	static/css.external/spectrum.css \
	static/css.external/bootstrap-select.css \
	static/fonts/glyphicons-halflings-regular.eot \
	static/fonts/glyphicons-halflings-regular.svg \
	static/fonts/glyphicons-halflings-regular.ttf \
	static/fonts/glyphicons-halflings-regular.woff \
	static/fonts/glyphicons-halflings-regular.woff2 \
	static/images/favicon.ico \
	static/images/logo_hatohol.png \
	static/images/icon_push_hatohol.png \
	static/js.external/jquery.min.js \
	static/js.external/jquery.shiftcheckbox.js \
	static/js.external/jquery-ui.min.js \
	static/js.external/jquery-ui-slider-pips.min.js \
	static/js.external/jquery.datetimepicker.js \
	static/js.external/jquery.flot.js \
	static/js.external/jquery.flot.time.js \
	static/js.external/jquery.flot.selection.js \
	static/js.external/jquery.flot.pie.js \
	static/js.external/jquery.flot.resize.js \
	static/js.external/jquery-deparam.min.js \
	static/js.external/multiselect.min.js \
	static/js.external/bootstrap.min.js \
	static/js.external/spectrum.js \
	static/js.external/bootstrap-select.js \
	static/js.external/desktop-notify-min.js \
	static/js.external/jstz.min.js \
	static/js.plugins/hapi-json.js \
	static/js.plugins/hap2-ceilometer.js \
	static/js.plugins/hap2-fluentd.js \
	static/js.plugins/hap2-nagios-ndoutils.js \
	static/js.plugins/hap2-nagios-livestatus.js \
	static/js.plugins/hap2-zabbix.js \
	static/js/utils.js \
	static/js/hatohol_monitoring_view.js \
	static/js/dashboard_view.js \
	static/js/overview_triggers.js \
	static/js/overview_items.js \
	static/js/latest_view.js \
	static/js/triggers_view.js \
	static/js/events_view.js \
	static/js/history_view.js \
	static/js/servers_view.js \
	static/js/actions_view.js \
	static/js/incident_settings_view.js \
	static/js/log_search_systems_view.js \
	static/js/graphs_view.js \
	static/js/users_view.js \
	static/js/custom_incident_labels_view.js \
	static/js/severity_ranks_view.js \
	static/js/hatohol_def.js \
	static/js/hatohol_connector.js \
	static/js/hatohol_graph.js \
	static/js/hatohol_session_manager.js \
	static/js/hatohol_item_selector.js \
	static/js/hatohol_login_dialog.js \
	static/js/hatohol_message_box.js \
	static/js/hatohol_navi.js \
	static/js/hatohol_pager.js \
	static/js/hatohol_user_profile.js \
	static/js/hatohol_userconfig.js \
	static/js/hatohol_password_changer.js \
	static/js/hatohol_add_action_dialog.js \
	static/js/hatohol_user_edit_dialog.js \
	static/js/hatohol_user_roles_editor.js \
	static/js/hatohol_server_bulkupload_dialog.js \
	static/js/hatohol_server_edit_dialog_parameterized.js \
	static/js/hatohol_dialog.js \
	static/js/hatohol_modal.js \
	static/js/hatohol_reconnection_modal.js \
	static/js/hatohol_item_remover.js \
	static/js/hatohol_reply_parser.js \
	static/js/hatohol_server_selector.js \
	static/js/hatohol_time_range_selector.js \
	static/js/hatohol_hostgroup_privilege_edit_dialog.js \
	static/js/hatohol_privilege_edit_dialog.js \
	static/js/hatohol_history_loader.js \
	static/js/hatohol_host_selector.js \
	static/js/hatohol_selector_dialog.js \
	static/js/hatohol_trigger_selector.js \
	static/js/hatohol_actor_mail_dialog.js \
	static/js/hatohol_hostgroup_selector.js \
	static/js/hatohol_incident_trackers_editor.js \
	static/js/hatohol_log_search_system_editor.js \
	static/js/hatohol_version.js \
	static/js/hatohol_item_update.js \
	static/js/hatohol_events_view_config.js \
	static/js/hatohol_triggers_view_config.js \
	static/js/before_close.js \
	static/js/push_notify.js \
	static/js/hatohol_tracer.js \
	viewer/urls.py \
	viewer/__init__.py \
	viewer/models.py \
	viewer/triggers_ajax.html \
	viewer/servers_ajax.html \
	viewer/latest_ajax.html \
	viewer/overview_triggers_ajax.html \
	viewer/views.py \
	viewer/events_ajax.html \
	viewer/base_ajax.html \
	viewer/overview_items_ajax.html \
	viewer/dashboard_ajax.html \
	viewer/actions_ajax.html \
	viewer/incident_settings_ajax.html \
	viewer/users_ajax.html \
	viewer/userconfig.py \
	viewer/hosts_ajax.html \
	viewer/history_ajax.html \
	viewer/log_search_systems_ajax.html \
	viewer/graphs_ajax.html \
	viewer/custom_incident_labels_ajax.html \
	viewer/severity_ranks_ajax.html \
	viewer/tests.py

pkgsysconf_DATA = \
	conf/webui.conf
pkgsysconfdir = $(sysconfdir)/$(PACKAGE)

EXTRA_DIST = \
	$(pkgsysconf_DATA)

MO_FILES = \
	conf/locale/ja/LC_MESSAGES/django.mo \
	conf/locale/ja/LC_MESSAGES/djangojs.mo

CLEANFILES = \
	$(MO_FILES)

nobase_nodist_hatohol_client_DATA = \
	$(MO_FILES)

HATOHOL_DEF_GENERATOR = \
	$(top_builddir)/server/tools/hatohol-def-src-file-generator
HATOHOL_SERVER_TYPE_UTIL = \
	$(top_builddir)/server/tools/hatohol-server-type-util

static/js/hatohol_def.js: $(HATOHOL_DEF_GENERATOR)
	$(HATOHOL_DEF_GENERATOR) js > $@

$(HATOHOL_DEF_GENERATOR):
	$(MAKE) -C $(top_builddir)/server/tools/ hatohol-def-src-file-generator

hatohol/hatohol_def.py: $(HATOHOL_DEF_GENERATOR)
	$(HATOHOL_DEF_GENERATOR) py > $@

misc/external-labels.js: $(HATOHOL_SERVER_TYPE_UTIL)
	mkdir -p misc
	$(HATOHOL_SERVER_TYPE_UTIL) label-gettext > $@

update-po: misc/external-labels.js
	$(srcdir)/manage.py makemessages -a
	$(srcdir)/manage.py makemessages -d djangojs -a

.po.mo:
	$(MSGFMT) -o $@ $<
